# velocity

./: .gitignore  pyproject.toml
docker/: Dockerfile
velocity/: __init__.py
velocity/utils/array/: __init__.py  is_sorted.py  sort.py
velocity/utils/validations/: is_np_array.py
